<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@color/inputLine"
    android:layout_margin="5dp"
    android:outlineSpotShadowColor="@color/colorPrimary"
    android:padding="5dp"
    android:elevation="50dp"
...
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:id="@+id/checkBox"
                android:layout_width="@dimen/the30"
                android:layout_height="@dimen/the30"
                android:layout_weight="1"
                android:outlineSpotShadowColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:text="CheckBox" />
...
