<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/setting"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="InvalidId">

    <LinearLayout
        android:id="@+id/account_layout"
        android:layout_width="@dimen/the270"
        android:layout_height="@dimen/the80"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:animateLayoutChanges="true"
        android:gravity="center|start|fill_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id = "@+id/btn_headPic"
            android:layout_width="@dimen/time"
            android:layout_height="@dimen/time"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/headpic" />
        <Button
            android:id="@+id/btn_accountSetting"
            android:fontFamily="@font/raleway"
            android:text="账号"
            android:background="#00000000"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="@dimen/nav_header"
            android:layout_height="@dimen/time" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="3px"
        android:layout_marginLeft="-10dp"
        android:layout_marginTop="10dp"
        android:background="#5C000000" />

    <LinearLayout
        android:id="@+id/theme_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:animateLayoutChanges="true"
        android:gravity="center|start|fill_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id = "@+id/btn_themePic"
            android:layout_width="@dimen/the30"
            android:layout_height="@dimen/the30"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/home" />
        <Button
            android:id="@+id/btn_theme"
            android:fontFamily="@font/raleway"
            android:text="主题"
            android:background="#00000000"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/time" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_us_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:animateLayoutChanges="true"
        android:gravity="center|start|fill_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id = "@+id/btn_aboutUsPic"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/about" />
        <Button
            android:id="@+id/btn_about"
            android:fontFamily="@font/raleway"
            android:text="关于我们"
            android:background="#00000000"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/time" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/voice_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:animateLayoutChanges="true"
        android:gravity="center|start|fill_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id = "@+id/btn_voicePic"
            android:layout_width="@dimen/the30"
            android:layout_height="@dimen/the30"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/alarm" />
        <Button
            android:id="@+id/btn_voice"
            android:fontFamily="@font/raleway"
            android:text="声音与提醒"
            android:background="#00000000"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/time" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ban_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:animateLayoutChanges="true"
        android:gravity="center|start|fill_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id = "@+id/btn_banPic"
            android:layout_width="@dimen/the30"
            android:layout_height="@dimen/the30"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/leaf" />

        <Button
            android:id="@+id/btn_ban"
            android:fontFamily="@font/raleway"
            android:text="免打扰模式"
            android:background="#00000000"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/time" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/backup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:animateLayoutChanges="true"
        android:gravity="center|start|fill_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id = "@+id/btn_backup_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/about" />
        <Button
            android:id="@+id/btn_backup"
            android:fontFamily="@font/raleway"
            android:text="备份"
            android:background="#00000000"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

</LinearLayout>