...
        android:layout_marginBottom="16dp"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        skin:enable="true"
        app:layout_anchor="@id/main"
        app:layout_anchorGravity="bottom|end"
        android:id="@+id/fab_addTask"
        android:scaleType="centerInside"
        android:importantForAutofill="auto"
        android:backgroundTint="#e6e6e6"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:maxImageSize="@dimen/fab"
...
