<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_collections"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_today"
            android:icon="@drawable/nav_today"
            android:title="@string/nav_today" />
        <item
            android:id="@+id/nav_item_collection"
            android:icon="@drawable/nav_collection"
            android:title="@string/nav_collection" />
        <item
            android:id="@+id/nav_item_courses"
            android:icon="@drawable/nav_courses"
            android:title="@string/nav_courses" />
    </group>
    <group android:id="@+id/group_add"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_add"
            android:icon="@drawable/nav_new"
            android:title="@string/add_list_file" />
    </group>
</menu>