<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:skin="http://schemas.android.com/android/skin"
    skin:enable="true"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/inputLine"
    tools:openDrawer="start">
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        skin:enbale="true"
        app:itemBackground="@drawable/ripple"
        app:itemTextColor="@color/nav_item"
        app:itemIconTint="@color/nav_item"
        android:background="@color/inputLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:headerLayout="@layout/side_menu_nav_header"
        app:menu="@menu/drawer"
        />
</androidx.drawerlayout.widget.DrawerLayout>