<resources>
    <string name="app_name">trail</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for the Paris Opera.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_today">今天</string>
    <string name="nav_collection">收集箱</string>
    <string name="nav_courses">课程列</string>
    <string name="add_list_file">添加清单夹</string>
    <string name="avatar">avatar</string>
    <string name="login_success">login successfully!</string>

    <string name="title">标题</string>
    <string name="description">内容/描述</string>
    <string name="remind_me">提醒时间</string>
    <string name="remind_date_and_time">提醒时间设为 %1$s, %2$s %3$s</string>
    <string name="date_error_check_again">提醒日期早于今天</string>
    <string name="date_reminder_default">今天</string>
    <string name="expire_time">终止时间</string>
    <string name="expire_place">地点</string>
    <string name="image">image_desc</string>
    <string name="at">\@</string>
    <string name="select_time">选择时间</string>
    <string name="priority">优先级</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_mini_task">Add mini task</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="theme">主题</string>
    <string name="voice">声音与提醒</string>
    <string name="about">关于</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="back">返回</string>
    <string name="logout">退出登录</string>
    <string name="divider">--------------</string>
    <string name="default_theme">默认</string>
    <string name="orange_theme">橙色</string>
    <string name="blue_theme">蓝色</string>
    <string name="guard">学习陪伴</string>
    <string name="assign">智能安排</string>
    <string name="action_today">今日</string>
    <string name="action_day_view">日视图</string>
    <string name="action_three_day_view">3日视图</string>
    <string name="action_week_view">周视图</string>
    <string name="assign_today">今天</string>
    <string name="assign_one">日视图</string>
    <string name="assign_three">三日视图</string>
    <string name="assign_week">周视图</string>
</resources>
